docs/original_moodle/unidades/entregas/todas/2/Tarea 8 - Calculadora de Horas/SIMARRA-1151896 NEIDER JOAN 2581/2019-09-22-22-21-08.ceg/compilation.txt
Hora.java:138: error: incompatible types: String cannot be converted to Hora
      return this.formato=HH24;;//COMPLETE
                         ^
1 error
Not compiled
